# calibrate-hmd-v3

./: .gitignore  1440x1600  CMakeLists.txt  README.md  aruco-calib-0.py  charucotest.py  half_basalt_calibration.py
src/: CMakeLists.txt  both.cpp  calibrate.cpp  capture.cpp  defines.hpp  fdg.cpp  in_grid.hpp  laplace.cpp  load_basalt_calibration.hpp  m_vec2.h  main.cpp  u_json.c  u_json.h  yar.json  yar2.json
src/mechanical/: CMakeLists.txt  upload.cpp
src/optical/: CMakeLists.txt  calibrate.cpp  capture.cpp  defines.hpp  fdg.cpp  fdg.hpp  laplace.cpp  view.cpp
src/util/: CMakeLists.txt  load_basalt_calibration.cpp
